objects/AssetReparent__c.object
<CustomObject>
    <fields>
        <fullName>AccountantAssetDel__c</fullName>
        <label>AccountantAssetDel</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <externalId>true</externalId>
        <label>Company Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reprocessFlag__c</fullName>
        <label>reprocessFlag</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>